[gd_scene load_steps=2 format=2]

[ext_resource path="res://Demo.gd" type="Script" id=1]

[node name="Demo" type="Node2D"]
script = ExtResource( 1 )

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 9.0
margin_top = 8.0
margin_right = 118.0
margin_bottom = 48.0
rect_scale = Vector2( 0.2, 0.2 )

[node name="Label" type="Label" parent="Container"]
margin_right = 109.0
margin_bottom = 14.0
text = "Count : 100 dots."

[node name="value_selector" type="HSlider" parent="Container"]
margin_top = 18.0
margin_right = 109.0
margin_bottom = 34.0
min_value = 1.0
max_value = 250.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
margin_top = 38.0
margin_right = 109.0
margin_bottom = 58.0

[node name="Apply_button" type="Button" parent="Container/HBoxContainer"]
margin_right = 52.0
margin_bottom = 20.0
rect_min_size = Vector2( 52, 20 )
text = "Apply"

[connection signal="value_changed" from="Container/value_selector" to="." method="_on_value_selector_value_changed"]
[connection signal="pressed" from="Container/HBoxContainer/Apply_button" to="." method="_on_Button_pressed"]
